crates/codelens-engine/tests/snapshots/snapshot_golden__find_symbol_exact.snap
---
source: crates/codelens-engine/tests/snapshot_golden.rs
assertion_line: 41
expression: summary
---
[
  [
    "UserService",
    "class",
    "src/service.py"
  ]
]
