crates/codelens-engine/tests/snapshots/snapshot_golden__find_symbol_fuzzy.snap
---
source: crates/codelens-engine/tests/snapshot_golden.rs
expression: summary
---
[
  [
    "User",
    "src/models.ts"
  ],
  [
    "UserRepository",
    "src/models.ts"
  ],
  [
    "UserService",
    "src/service.py"
  ],
  [
    "delete_user",
    "src/service.py"
  ],
  [
    "get_user",
    "src/service.py"
  ],
  [
    "validateUser",
    "src/models.ts"
  ]
]
