crates/codelens-engine/tests/snapshots/snapshot_golden__python_overview_names.snap
---
source: crates/codelens-engine/tests/snapshot_golden.rs
assertion_line: 20
expression: names
---
[
  "UserService",
  "AuthService",
  "create_app"
]
