crates/codelens-engine/tests/snapshots/snapshot_golden__typescript_overview_names.snap
---
source: crates/codelens-engine/tests/snapshot_golden.rs
assertion_line: 29
expression: names
---
[
  "User",
  "Session",
  "validateUser",
  "UserRepository"
]
